changed heatmap colors

--- a/create_plots.ipynb
+++ b/create_plots.ipynb
@@ -387,17 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "word ventral_visual_cortex 0.6666666666666666\n",
-      "face ventral_visual_cortex 0.3333333333333333\n",
-      "tool dorsal_visual_cortex 0.2916666666666667\n",
-      "space dorsal_visual_cortex 0.25\n"
+      "word ventral_visual_cortex 0.6666666666666666 0.18924713134765625\n",
+      "face ventral_visual_cortex 0.3333333333333333 0.18924713134765625\n",
+      "tool dorsal_visual_cortex 0.2916666666666667 0.06391465663909912\n",
+      "space dorsal_visual_cortex 0.25 0.022655844688415527\n"
      ]
     }
    ],
@@ -456,9 +456,13 @@
     "        data_summary.loc[data_summary['sub']==sub, 'percentile'] = percentile\n",
     "\n",
     "    #count how many subjects have a percentile greater thant 97.5\n",
-    "    prop = data_summary[data_summary['percentile'] > 97.5].shape[0]/ data_summary.shape[0]\n",
+    "    count = data_summary[data_summary['percentile'] > 97.5].shape[0]\n",
+    "    \n",
     "\n",
-    "    print(cond, roi, prop)\n",
+    "    #compute binomial test\n",
+    "    binom_test = stats.binom_test(count, data_summary.shape[0], p =.5)\n",
+    "    \n",
+    "    print(cond, roi, count/data_summary.shape[0], binom_test)\n",
     "    \n",
     "    \n",
     "\n",
@@ -467,6 +471,26 @@
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09462356567382812"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom_test"
    ]
   },
   {
