added CIs to behavioral data

--- a/behavior/word_face_analysis.ipynb
+++ b/behavior/word_face_analysis.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,13 +431,13 @@
     "            labs(fill='Group') #+ ggtitle(f'{cond}')\n",
     "        \n",
     "        \n",
-    "\n",
+    "    p.save(f'{fig_dir}/word_face_behavior.png', width=3, height=5, dpi = 300)\n",
     "    print(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
